force-app/main/default/objects/awsconnect__mdt/awsconnect__mdt.object-meta.xml
<CustomObject>
    <label>awsconnect</label>
    <pluralLabel>awsconnect</pluralLabel>
</CustomObject>