force-app/main/default/objects/awsconnect__mdt/fields/bucketname__c.field-meta.xml
<CustomField>
    <fullName>bucketname__c</fullName>
    <label>bucketname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>