force-app/main/default/objects/awsconnect__mdt/fields/host__c.field-meta.xml
<CustomField>
    <fullName>host__c</fullName>
    <label>host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>