force-app/main/default/objects/awsconnect__mdt/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <label>key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>